@@ -25,14 +25,14 @@ public class LegacySessionHelper {
     }
 
     public static JwtTokenInfo getJwtInfoFromAccessToken(String token, ECPublicKey publicKey) {
-        var parser = Jwts.parserBuilder()
+        var parser = Jwts.parser()
                 .requireIssuer("LaunchServer")
-                .setClock(() -> new Date(Clock.systemUTC().millis()))
-                .setSigningKey(publicKey)
+                .clock(() -> new Date(Clock.systemUTC().millis()))
+                .verifyWith(publicKey)
                 .build();
-        var claims = parser.parseClaimsJws(token);
-        var uuid = UUID.fromString(claims.getBody().get("uuid", String.class));
-        var username = claims.getBody().getSubject();
+        var claims = parser.parseSignedClaims(token);
+        var uuid = UUID.fromString(claims.getPayload().get("uuid", String.class));
+        var username = claims.getPayload().getSubject();
         return new JwtTokenInfo(username, uuid);
     }
 
@@ -41,7 +41,7 @@ public class LegacySessionHelper {
             rawPassword = "";
         }
         return SecurityHelper.toHex(SecurityHelper.digest(SecurityHelper.DigestAlgorithm.SHA256,
-                String.format("%s.%s.%s.%s", secretSalt, username, rawPassword, secretSalt)));
+                "%s.%s.%s.%s".formatted(secretSalt, username, rawPassword, secretSalt)));
     }
 
     public record JwtTokenInfo(String username, UUID uuid) {
